--- a/Ray Tracing Project/View/MainView.xaml
+++ b/Ray Tracing Project/View/MainView.xaml
@@ -14,6 +14,11 @@
         <Binding Source="{StaticResource ViewModelLocator}" Path="MainViewModel"/>
     </Window.DataContext>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
         <Image Width="256" Height="256"  Source="{Binding Source}"/>
+        <ProgressBar Grid.Row="1" Height="30" Width="500" Margin="0 20 0 20" Value="{Binding ProgressPercentage}"/>
     </Grid>
 </Window>
