--- a/Ray Tracing Project/View/MainView.xaml
+++ b/Ray Tracing Project/View/MainView.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Ray_Tracing_Project.View"
         xmlns:vm="clr-namespace:Ray_Tracing_Project.ViewModel"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Title="Ray Tracer App" Height="450" Width="800">
     <Window.Resources>
@@ -13,6 +14,11 @@
     <Window.DataContext>
         <Binding Source="{StaticResource ViewModelLocator}" Path="MainViewModel"/>
     </Window.DataContext>
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
