--- a/Ray Tracing Project/View/MainView.xaml
+++ b/Ray Tracing Project/View/MainView.xaml
@@ -23,8 +23,12 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Image Width="256" Height="256"  Source="{Binding Source}"/>
-        <ProgressBar Grid.Row="1" Height="30" Width="500" Margin="0 20 0 20" Value="{Binding ProgressPercentage}"/>
+        <Image Width="456" Source="{Binding Source}"/>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button Width="90" Height="20" Content="Trace" Command="{Binding TraceCommand}" Margin="0 0 10 0"/>
+        </StackPanel>
+        <ProgressBar Grid.Row="2" Height="30" Width="500" Margin="0 20 0 20" Value="{Binding ProgressPercentage}"/>
     </Grid>
 </Window>
