--- a/Ray Tracing Project/View/MainView.xaml
+++ b/Ray Tracing Project/View/MainView.xaml
@@ -18,28 +18,10 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Image Width="456" Source="{Binding Source}"/>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel Margin="0 20" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button Width="90" Height="20" Content="Trace" Command="{Binding TraceCommand}" Margin="0 0 10 0"/>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Radius"/>
-                <Slider Width="90" Value="{Binding Radius, Mode=TwoWay}" Minimum="0.1" Maximum="1"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="X"/>
-                <Slider Width="90" Value="{Binding X, Mode=TwoWay}" Minimum="-2" Maximum="2"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Y"/>
-                <Slider Width="90" Value="{Binding Y, Mode=TwoWay}" Minimum="-2" Maximum="2"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Z"/>
-                <Slider Width="90" Value="{Binding Z, Mode=TwoWay}" Minimum="-10" Maximum="1"/>
-            </StackPanel>
         </StackPanel>
-        <ProgressBar Grid.Row="2" Height="30" Width="500" Margin="0 20 0 20" Value="{Binding ProgressPercentage}"/>
     </Grid>
 </Window>
